# netcat

./: CMakeLists.txt  buildwin.bat  nc_full.vcxproj  netcat.c
